Fixed tag <button>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <img  class="courses-icon" src="./img/Ellipse.png" alt="ellipse">
               <p>83%</p>              
             </div>            
-            <div class="courses-bottom">Continue</div>
+            <button class="courses-button">Continue</button>
           </div>
           <img class="spanish-button" src="./img/arrow-left.png" alt="arrow left">
           <img class="spanish-button" src="./img/arrow-right.png" alt="arrow right">
@@ -81,7 +81,7 @@
                 <img  class="courses-icon" src="./img/fire.png" alt="fire">
                 <p>4,9</p>              
               </div>              
-              <div class="courses-bottom">View course</div>
+              <button class="courses-button">View course</button>
             </div>
             <div class="courses-block">
               <div class="courses-name">
@@ -101,7 +101,7 @@
                 <img  class="courses-icon" src="./img/fire.png" alt="fire">
                 <p>4,7</p>              
               </div>              
-              <div class="courses-bottom">View course</div>
+              <button class="courses-button">View course</button>
             </div>
 
             <div class="courses-block">
@@ -122,7 +122,7 @@
                 <img  class="courses-icon" src="./img/fire.png" alt="fire">
                 <p>4,6</p>              
               </div>              
-              <div class="courses-bottom">View course</div>
+              <button class="courses-button">View course</button>
             </div>
 
             <div class="courses-block">
@@ -143,7 +143,7 @@
                 <img  class="courses-icon" src="./img/fire.png" alt="fire">
                 <p>4,8</p>              
               </div>              
-              <div class="courses-bottom">View course</div>
+              <button class="courses-button">View course</button>
             </div>
 
             <div class="courses-block">
@@ -164,7 +164,7 @@
                 <img  class="courses-icon" src="./img/fire.png" alt="fire">
                 <p>4,7</p>              
               </div>              
-              <div class="courses-bottom">View course</div>
+              <button class="courses-button">View course</button>
             </div>
           </div>        
         </article>
@@ -193,7 +193,7 @@
           </div>          
         </div>
 
-        <h2>Your statistics</h2>
+        <h2 class="statistics">Your statistics</h2>
         <div class="pages-2-courses-menu">
           <div class="courses-menu">
             <h3>Learning Hours</h3>
@@ -209,7 +209,7 @@
           <div class="brain-block-content">
             <h2>Lern even more!</h2>
             <p>Unlock premium features only for $9.99 per month.</p>
-            <div class="courses-bottom go-premium">Go Premium</div>
+            <button class="courses-button go-premium">Go Premium</button>
           </div>
           <div class="brain-block-img">
             <img class="brain" src="./img/brain.png" alt="brain and book">
