Added activity to the course menu

--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
         <article>
           <h2>Courses</h2>
           <div class="courses-menu">
-            <h3>All Courses</h3>
-            <h3>The Newest</h3>
-            <h3>Top Rated</h3>
-            <h3>Most Popular</h3>
+            <input id="radio-1" type="radio" name="radio-courses" value="1" checked>
+              <label for="radio-1"><h3>All Courses</h3></label>
+            <input id="radio-2" type="radio" name="radio-courses" value="2">
+              <label for="radio-2"><h3>The Newest</h3></label>
+            <input id="radio-3" type="radio" name="radio-courses" value="3">
+              <label for="radio-3"><h3>Top Rated</h3></label>
+            <input id="radio-4" type="radio" name="radio-courses" value="4">
+              <label for="radio-4"><h3>Most Popular</h3></label>
           </div>
           <div class="courses-wrapper">
             <div class="courses-block">
@@ -196,8 +200,10 @@
         <h2 class="statistics">Your statistics</h2>
         <div class="pages-2-courses-menu">
           <div class="courses-menu">
-            <h3>Learning Hours</h3>
-            <h3>My Courses</h3>
+            <input id="radio-5" type="radio" name="radio-courses-2" value="1" checked>
+              <label for="radio-5"><h3>Learning Hours</h3></label>            
+            <input id="radio-6" type="radio" name="radio-courses-2" value="2">
+              <label for="radio-6"><h3>My Courses</h3></label>            
           </div>
           <div class="courses-menu-button">
             <p>Weekly</p>
